--- a/dietary.html
+++ b/dietary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Mental Health: A Powerful Tool</title>
+    <title>Dietary Choices: A Powerful Tool</title>
     <style>
         html, body {
             height: 100%;
@@ -20,8 +20,8 @@
         }
         h1 {
             text-align: center;
-            color: #7bbfff;
-            margin: 28px 0 18px 0;
+            color: #7be495;
+            margin-top: 28px;
             font-size: 2em;
             letter-spacing: 0.5px;
         }
@@ -29,16 +29,14 @@
             background: #232c33;
             padding: 18px 14px;
             border-radius: 10px;
-            margin: 18px 0;
+            margin: 18px auto;
             box-shadow: 0 2px 8px rgba(0,0,0,0.18);
             max-width: 500px;
-            margin-left: auto;
-            margin-right: auto;
         }
         h2 {
             color: #7bbfff;
             margin-top: 0;
-            font-size: 1.2em;
+            font-size: 1.15em;
         }
         ul {
             padding-left: 20px;
@@ -47,6 +45,7 @@
         li {
             margin-bottom: 10px;
             font-size: 1em;
+            color: #cbd5e1;
             line-height: 1.6;
         }
         .resources a {
@@ -64,13 +63,13 @@
         /* Back button styling - upper right */
         .back-btn {
             position: fixed;
-            top: 14px;
-            right: 14px;
+            top: 18px;
+            right: 18px;
             background: #2563eb;
             color: #fff;
             border: none;
             border-radius: 50px;
-            padding: 12px 22px;
+            padding: 12px 20px;
             font-size: 1.1em;
             font-weight: 500;
             box-shadow: 0 2px 8px rgba(0,0,0,0.20);
@@ -83,20 +82,21 @@
         }
         @media (max-width: 600px) {
             h1 {
-                font-size: 1.4em;
-                margin: 18px 0 12px 0;
+                font-size: 1.3em;
+                margin-top: 14px;
             }
             .section {
-                padding: 14px 6px;
+                padding: 12px 4px;
                 margin: 12px 0;
                 border-radius: 8px;
                 font-size: 1em;
+                max-width: 98vw;
             }
             .back-btn {
                 padding: 10px 14px;
                 font-size: 1em;
-                top: 8px;
-                right: 8px;
+                top: 10px;
+                right: 10px;
             }
             ul {
                 padding-left: 16px;
@@ -107,7 +107,7 @@
         }
         @media (max-width: 400px) {
             .section {
-                padding: 10px 2px;
+                padding: 8px 2px;
             }
             .back-btn {
                 font-size: 0.95em;
@@ -118,36 +118,36 @@
 </head>
 <body>
     <button class="back-btn" onclick="window.location.href='index.html'">Back to Med Pal</button>
-    <h1>Mental Health: Your Inner Strength</h1>
+    <h1>Dietary Choices: Your Daily Power</h1>
     <div class="section">
-        <h2>Mental Health as a Tool</h2>
+        <h2>Dietary Choices as a Tool</h2>
         <p>
-            Mental health is a vital tool for living a balanced and fulfilling life. It influences how you think, feel, act, handle stress, relate to others, and make choices. Taking care of your mental well-being can boost resilience, improve relationships, and help you achieve your goals. Just as you care for your body, nurturing your mind is essential for overall health.
+            The dietary choices you make every day are powerful tools for shaping your health and well-being. Choosing a variety of nutrient-rich foods can help you maintain energy, prevent chronic diseases, manage weight, and support both physical and mental health. Thoughtful dietary habits can also reflect your values, such as sustainability and cultural traditions.
         </p>
         <ul>
-            <li><strong>Resilience:</strong> Good mental health helps you cope with challenges and bounce back from setbacks.</li>
-            <li><strong>Productivity:</strong> A healthy mind enhances focus, creativity, and performance at work or school.</li>
-            <li><strong>Relationships:</strong> Emotional well-being improves communication and strengthens connections with others.</li>
-            <li><strong>Physical Health:</strong> Mental and physical health are closely linked; caring for one supports the other.</li>
+            <li><strong>Prevention:</strong> Healthy choices lower the risk of diabetes, heart disease, and certain cancers.</li>
+            <li><strong>Weight Management:</strong> Balanced meals help you achieve and maintain a healthy weight.</li>
+            <li><strong>Energy & Mood:</strong> Nutritious foods support stable energy and a positive outlook.</li>
+            <li><strong>Longevity:</strong> Good dietary habits contribute to a longer, healthier life.</li>
         </ul>
     </div>
     <div class="section resources">
-        <h2>Mental Health Resources</h2>
+        <h2>Dietary Choices Resources</h2>
         <ul>
             <li>
-                <a href="https://www.mentalhealth.gov/" target="_blank">MentalHealth.gov</a> – U.S. government information and support.
+                <a href="https://www.choosemyplate.gov/" target="_blank">USDA MyPlate</a> – Guidance on balanced eating.
             </li>
             <li>
-                <a href="https://www.nimh.nih.gov/health/topics/caring-for-your-mental-health" target="_blank">NIMH: Caring for Your Mental Health</a> – Tips and science-based advice.
+                <a href="https://www.hsph.harvard.edu/nutritionsource/healthy-eating-plate/" target="_blank">Harvard Healthy Eating Plate</a> – Science-based dietary tips.
             </li>
             <li>
-                <a href="https://www.who.int/health-topics/mental-health" target="_blank">WHO: Mental Health</a> – Global perspectives and resources.
+                <a href="https://www.heart.org/en/healthy-living/healthy-eating" target="_blank">American Heart Association: Healthy Eating</a> – Heart-smart food choices.
             </li>
             <li>
-                <a href="https://www.samhsa.gov/find-help/national-helpline" target="_blank">SAMHSA National Helpline</a> – Free, confidential support (U.S.).
+                <a href="https://www.eatright.org/food" target="_blank">Academy of Nutrition and Dietetics</a> – Practical food and nutrition advice.
             </li>
             <li>
-                <a href="https://www.mind.org.uk/information-support/" target="_blank">Mind (UK)</a> – Information and support for mental health.
+                <a href="https://www.nutrition.gov/topics/whats-food" target="_blank">Nutrition.gov: What's In Food?</a> – Food facts and meal planning tools.
             </li>
         </ul>
     </div>
