--- a/nutrition.html
+++ b/nutrition.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Nutrition: A Powerful Tool</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
-            background: #f8fafc;
-            color: #222;
+            background: #161d23;
+            color: #e3e8ee;
+        }
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            padding: 0;
+            min-height: 100vh;
+            box-sizing: border-box;
         }
         .container {
             max-width: 440px;
             margin: 24px auto 0 auto;
-            background: #fff;
+            background: #232c33;
             border-radius: 12px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+            box-shadow: 0 4px 24px rgba(0,0,0,0.32);
             padding: 18px 14px 28px 14px;
             display: flex;
             flex-direction: column;
@@ -25,60 +31,102 @@
         }
         h1 {
             text-align: center;
-            color: #2a7b3f;
+            color: #7be495;
             margin-top: 8px;
+            font-size: 2em;
+            letter-spacing: 0.5px;
         }
         .section {
-            background: #f8fafc;
-            padding: 0;
+            background: #1b2329;
+            padding: 16px 10px;
             border-radius: 10px;
             margin: 0;
             box-shadow: none;
         }
         h2 {
-            color: #3e8e41;
+            color: #7bbfff;
             margin-top: 0;
+            font-size: 1.15em;
         }
         ul {
             padding-left: 20px;
+            margin: 12px 0;
+        }
+        li {
+            margin-bottom: 10px;
+            font-size: 1em;
+            color: #cbd5e1;
+            line-height: 1.6;
         }
         .resources a {
-            color: #007bff;
+            color: #7bbfff;
             text-decoration: none;
+            word-break: break-all;
         }
         .resources a:hover {
             text-decoration: underline;
+            color: #7be495;
+        }
+        strong {
+            color: #b3c4d6;
         }
         /* Back button styling - upper right */
         .back-btn {
             position: fixed;
             top: 18px;
             right: 18px;
-            background: #007bff;
+            background: #2563eb;
             color: #fff;
             border: none;
             border-radius: 50px;
             padding: 12px 20px;
-            font-size: 16px;
+            font-size: 1.1em;
             font-weight: 500;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+            box-shadow: 0 2px 8px rgba(0,0,0,0.20);
             cursor: pointer;
             z-index: 99;
             transition: background 0.2s;
         }
-        .back-btn:hover {
-            background: #0056b3;
+        .back-btn:hover, .back-btn:active {
+            background: #1d4ed8;
         }
-        @media (max-width: 480px) {
+        @media (max-width: 600px) {
             .container {
                 max-width: 98vw;
                 padding: 10px 4px 18px 4px;
+                border-radius: 8px;
+            }
+            h1 {
+                font-size: 1.3em;
+                margin-top: 10px;
+            }
+            .section {
+                padding: 12px 4px;
+                border-radius: 8px;
             }
             .back-btn {
                 padding: 10px 14px;
-                font-size: 15px;
+                font-size: 1em;
                 top: 10px;
                 right: 10px;
+            }
+            ul {
+                padding-left: 16px;
+            }
+            li {
+                font-size: 0.98em;
+            }
+        }
+        @media (max-width: 400px) {
+            .container {
+                padding: 6px 1px 10px 1px;
+            }
+            .section {
+                padding: 8px 2px;
+            }
+            .back-btn {
+                font-size: 0.95em;
+                padding: 8px 10px;
             }
         }
     </style>
@@ -122,4 +170,3 @@
     </div>
 </body>
 </html>
-
