--- a/screening.html
+++ b/screening.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Mental Health: A Powerful Tool</title>
+    <title>Health Screening Checklist: A Powerful Tool</title>
     <style>
         html, body {
             height: 100%;
@@ -21,7 +21,7 @@
         h1 {
             text-align: center;
             color: #7bbfff;
-            margin: 28px 0 18px 0;
+            margin-top: 28px;
             font-size: 2em;
             letter-spacing: 0.5px;
         }
@@ -29,16 +29,14 @@
             background: #232c33;
             padding: 18px 14px;
             border-radius: 10px;
-            margin: 18px 0;
+            margin: 18px auto;
             box-shadow: 0 2px 8px rgba(0,0,0,0.18);
             max-width: 500px;
-            margin-left: auto;
-            margin-right: auto;
         }
         h2 {
             color: #7bbfff;
             margin-top: 0;
-            font-size: 1.2em;
+            font-size: 1.15em;
         }
         ul {
             padding-left: 20px;
@@ -47,6 +45,7 @@
         li {
             margin-bottom: 10px;
             font-size: 1em;
+            color: #cbd5e1;
             line-height: 1.6;
         }
         .resources a {
@@ -64,13 +63,13 @@
         /* Back button styling - upper right */
         .back-btn {
             position: fixed;
-            top: 14px;
-            right: 14px;
+            top: 18px;
+            right: 18px;
             background: #2563eb;
             color: #fff;
             border: none;
             border-radius: 50px;
-            padding: 12px 22px;
+            padding: 12px 20px;
             font-size: 1.1em;
             font-weight: 500;
             box-shadow: 0 2px 8px rgba(0,0,0,0.20);
@@ -83,20 +82,21 @@
         }
         @media (max-width: 600px) {
             h1 {
-                font-size: 1.4em;
-                margin: 18px 0 12px 0;
+                font-size: 1.3em;
+                margin-top: 14px;
             }
             .section {
-                padding: 14px 6px;
+                padding: 12px 4px;
                 margin: 12px 0;
                 border-radius: 8px;
                 font-size: 1em;
+                max-width: 98vw;
             }
             .back-btn {
                 padding: 10px 14px;
                 font-size: 1em;
-                top: 8px;
-                right: 8px;
+                top: 10px;
+                right: 10px;
             }
             ul {
                 padding-left: 16px;
@@ -107,7 +107,7 @@
         }
         @media (max-width: 400px) {
             .section {
-                padding: 10px 2px;
+                padding: 8px 2px;
             }
             .back-btn {
                 font-size: 0.95em;
@@ -118,36 +118,38 @@
 </head>
 <body>
     <button class="back-btn" onclick="window.location.href='index.html'">Back to Med Pal</button>
-    <h1>Mental Health: Your Inner Strength</h1>
+    <h1>Health Screening Checklist</h1>
     <div class="section">
-        <h2>Mental Health as a Tool</h2>
+        <h2>Health Screening as a Tool</h2>
         <p>
-            Mental health is a vital tool for living a balanced and fulfilling life. It influences how you think, feel, act, handle stress, relate to others, and make choices. Taking care of your mental well-being can boost resilience, improve relationships, and help you achieve your goals. Just as you care for your body, nurturing your mind is essential for overall health.
+            Regular health screenings are powerful tools for early detection and prevention of diseases. By following a screening checklist, you can catch potential health issues before they become serious, ensuring timely treatment and better outcomes. Screenings are essential for maintaining long-term health and peace of mind.
         </p>
         <ul>
-            <li><strong>Resilience:</strong> Good mental health helps you cope with challenges and bounce back from setbacks.</li>
-            <li><strong>Productivity:</strong> A healthy mind enhances focus, creativity, and performance at work or school.</li>
-            <li><strong>Relationships:</strong> Emotional well-being improves communication and strengthens connections with others.</li>
-            <li><strong>Physical Health:</strong> Mental and physical health are closely linked; caring for one supports the other.</li>
+            <li><strong>Blood Pressure:</strong> Check at least once every 1-2 years for adults.</li>
+            <li><strong>Cholesterol:</strong> Screen every 4-6 years, or as recommended.</li>
+            <li><strong>Blood Glucose:</strong> Test for diabetes risk, especially if overweight or family history exists.</li>
+            <li><strong>Cancer Screenings:</strong> Mammograms, Pap smears, colonoscopies, and prostate checks as age/gender appropriate.</li>
+            <li><strong>Vision & Hearing:</strong> Regular checks, especially after age 40.</li>
+            <li><strong>Immunizations:</strong> Stay updated on vaccines (flu, tetanus, COVID-19, etc.).</li>
         </ul>
     </div>
     <div class="section resources">
-        <h2>Mental Health Resources</h2>
+        <h2>Health Screening Resources</h2>
         <ul>
             <li>
-                <a href="https://www.mentalhealth.gov/" target="_blank">MentalHealth.gov</a> – U.S. government information and support.
+                <a href="https://www.cdc.gov/prevention/" target="_blank">CDC: Prevention & Screening</a> – Guidelines and recommendations.
             </li>
             <li>
-                <a href="https://www.nimh.nih.gov/health/topics/caring-for-your-mental-health" target="_blank">NIMH: Caring for Your Mental Health</a> – Tips and science-based advice.
+                <a href="https://www.who.int/news-room/fact-sheets/detail/screening-for-various-cancers" target="_blank">WHO: Screening for Cancers</a> – Global cancer screening facts.
             </li>
             <li>
-                <a href="https://www.who.int/health-topics/mental-health" target="_blank">WHO: Mental Health</a> – Global perspectives and resources.
+                <a href="https://www.cancer.org/healthy/find-cancer-early/cancer-screening-guidelines/" target="_blank">American Cancer Society: Screening Guidelines</a> – Cancer-specific checklists.
             </li>
             <li>
-                <a href="https://www.samhsa.gov/find-help/national-helpline" target="_blank">SAMHSA National Helpline</a> – Free, confidential support (U.S.).
+                <a href="https://www.uspreventiveservicestaskforce.org/" target="_blank">USPSTF Recommendations</a> – Evidence-based screening advice.
             </li>
             <li>
-                <a href="https://www.mind.org.uk/information-support/" target="_blank">Mind (UK)</a> – Information and support for mental health.
+                <a href="https://familydoctor.org/prevention-health-screenings/" target="_blank">FamilyDoctor.org: Health Screenings</a> – Practical checklists for all ages.
             </li>
         </ul>
     </div>
